stl-test/Tests/coordinate/bounds/Negative/test1.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<-1> cord;
}
